# db-zap-opendata

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  build.sh  config.sh  dbt_project.yml  example.env  packages.yml  pull.py  pyproject.toml  requirements.in  requirements.txt  run.sh  zap.sh
.dbt/: profiles.yml
.devcontainer/: Dockerfile  devcontainer.json  example.env  initializeCommand.sh
.github/workflows/: build_mapzap.yml  export.yml  export_visible.yml  single_visible.yml  tests_branch.yml
bash/: dev_compile_python_packages.sh  setup_build_env.sh
docs/: column_descriptions.md
mapzap/models/marts/: _marts_models.yml
mapzap/models/product/: _product_models.yml  product_mapzap.sql  product_zap_project_geometries.sql
mapzap/models/staging/: _dcp_models.yml  _dcp_source.yml  stg_dcp__pluto_bbls.sql  stg_dcp__zap_bbls.sql  stg_dcp__zap_projects.sql  stg_dcp__zoning_map_amendments.sql
mapzap/models/staging/base/: base_dcp__zap_project_ids.sql  base_dcp__zap_projects_recoded.sql
mapzap/models/summary/: _summary_models.yml  summary_geometry_sources.sql  summary_mapzap_bbls.sql  summary_mapzap_stats.sql  summary_zap_projects_stats.sql
mapzap/seeds/: seed_pluto_versions.csv
python/: auth.py  pull.py
schemas/: dcp_communityboarddispositions.json  dcp_dcpprojectteams.json  dcp_projectactionbbls.json  dcp_projectactions.json  dcp_projectbbls.json  dcp_projectmilestones.json  dcp_projects.json
src/: __init__.py  columns.py  pg.py  recode.py  recode_id.py  runner.py  util.py  visible_projects.py
src/sql/: dcp_projects.sql
templates/: dcp_communityboarddispositions.yml  dcp_dcpprojectteams.yml  dcp_projectactionbbls.yml  dcp_projectactions.yml  dcp_projectbbls.yml  dcp_projectmilestones.yml  dcp_projects.yml
tests/: conftest.py  test_recode_id.py  test_runner.py  test_util.py  test_visible_projects.py
tests/test_data/: dcp_test_bigquery_a.csv  timestamp_data.csv
