[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["sptkl <email@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
msal = "^1.9.0"
python-dotenv = "^0.15.0"
pandas = "^1.2.2"
SQLAlchemy = "^1.3.23"
psycopg2-binary = "^2.8.6"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
