[build-system]
requires = ["pip-tools", "wheel"]

[project]
name = "db-zap-opendata"
version = "0.1"
requires-python = "==3.9.*"
dependencies = [
    "black",
    "dbt-bigquery==1.5.0",
    "msal",
    "pandas",
    "pandas",
    "pathlib",
    "psycopg2-binary",
    "pytest-cov",
    "pytest",
    "python-dotenv",
    "SQLAlchemy",
    "sqlfluff-templater-dbt",
    "sqlfluff",
]

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--strict-markers"

[tool.coverage.run]
# Measure branch coverage (https://coverage.readthedocs.io/en/latest/branch.html)
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
include_namespace_packages = true
show_missing = true
# Regexes for lines to exclude from consideration
exclude_lines =[
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
]

[tool.sqlfluff.core]
# templater = "dbt"
dialect = "bigquery"

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.rules.layout.long_lines]
# Line length
ignore_comment_lines = false

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"